tests/cases/objects/trailing-comma-illegal.vl
// @check
// @error expected IDENT but found COMMA
// A doubled comma in an object literal (`{ x: 1,, y: 2 }`) is still a syntax
// error: only one trailing comma before `}` is allowed, never an empty slot.
let o = { x: 1,, y: 2 }
